--- a/src/components/ProductCard/index.scss
+++ b/src/components/ProductCard/index.scss
@@ -1,5 +1,6 @@
 .cardContainer {
   border-radius: 2rem;
+  border: 1px solid gold;
 }
 .productInfo {
   padding: 1rem;
@@ -14,7 +15,7 @@
   font-weight: 700;
 }
 .description {
-  margin: 0.5rem 0;
+  margin: 1rem 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -29,6 +30,7 @@
   align-items: center;
   span {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
@@ -106,4 +108,8 @@
 .btn:hover {
   color: black;
   background-color: gold;
+}
+
+.productImg {
+  border-radius: 2rem 2rem 0 0;
 }
