--- a/src/components/SingleProduct/index.scss
+++ b/src/components/SingleProduct/index.scss
@@ -79,3 +79,20 @@
   padding-right: 0.5rem;
   color: gold;
 }
+.btn {
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+  border-width: 3px;
+  border-color: gold;
+  border-style: solid;
+  background-color: white;
+  font-size: medium;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn:hover {
+  color: black;
+  background-color: rgba(255, 217, 0, 0.658);
+}
