--- a/src/components/SingleProduct/index.scss
+++ b/src/components/SingleProduct/index.scss
@@ -38,7 +38,7 @@
   justify-content: start;
   span {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 0.5rem 0.5rem;
     font-size: medium;
